form validation: check size of attachment and text length

--- a/diaphragm/board/templates/board.html
+++ b/diaphragm/board/templates/board.html
@@ -54,6 +54,8 @@
         <p>{{ form.message }}</p>
         <p>{{ form.fileupload }}</p>
 
+        <p id="formerror" class="formerror"></p>
+
         <input class="submit" type="submit"
             value="Start" onclick="startThread(event);">
     </form>
