download threads in xml

--- a/diaphragm/board/templates/thread.html
+++ b/diaphragm/board/templates/thread.html
@@ -58,4 +58,8 @@
     </form>
 </div>
 
+<div class="onecolumn footer">
+    Download this <a href="/board/download/{{ thread.id }}" download="thread-{{ thread.id }}.xml">thread</a>.
+</div>
+
 {% endblock %}
