--- a/diaphragm/root/static/styles.css
+++ b/diaphragm/root/static/styles.css
@@ -386,6 +386,26 @@ body {
     margin: 0;
 }
 
+.post-footer {
+    overflow: auto;
+}
+
+.post-likes, .post-dislikes {
+    float: right;
+    cursor: pointer;
+    margin: 0;
+    margin-left: 2em;
+    color: grey;
+}
+
+.post-likes::before {
+    content: "Like: ";
+}
+
+.post-dislikes::before {
+    content: "Dislike: ";
+}
+
 .thread-reply {
     float: right;
     margin: 0;
