+ download all threads

--- a/diaphragm/board/templates/board.html
+++ b/diaphragm/board/templates/board.html
@@ -67,4 +67,8 @@
     </form>
 </div>
 
+<div class="onecolumn footer">
+    Download <a href="/board/download/all" download="threads-all.xml">all threads</a>.
+</div>
+
 {% endblock %}
