--- a/diaphragm/board/templates/xml-template.html
+++ b/diaphragm/board/templates/xml-template.html
@@ -1,16 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<board>
+{%for thread, posts in threads %}
 <thread id="{{ thread.id }}"{% if thread.subject %}
         subject="{{ thread.subject }}"{% endif %}>
-
-    <post id="{{ op.id }}"
-          time="{{ op.time.strftime('%Y/%m/%d %H:%M:%S') }}"
-          likes="{{ op.likes.count() }}"
-          dislikes="{{ op.dislikes.count() }}"
-          author="{{ op.author }}"{% if op.attachment %}
-          attachment="{{ op.attachment }}"{% endif %}>
-        {{ op.message }}
-    </post>
 {% for post in posts %}
     <post id="{{ post.id }}"
           time="{{ post.time.strftime('%Y/%m/%d %H:%M:%S') }}"
@@ -22,3 +15,5 @@
     </post>
 {% endfor %}
 </thread>
+{% endfor %}
+</board>
