edit page content

--- a/diaphragm/about/templates/about.html
+++ b/diaphragm/about/templates/about.html
@@ -12,7 +12,7 @@
 
     <p>
         Hi, everyone! My name is <i>Ivan Poroshin</i> and I'm third year computer science bachelor
-        student and enthusiastic programmer, interested in gamedev, robotics,
+        student and enthusiastic programmer, interested in gamedev,
         computer vision, bioinformatics and more.
     </p>
 
@@ -82,15 +82,14 @@
     <h2>Interests</h2>
     <p>
         I have interests in various fields, but the most passionate I am in:
-        <ul>
-            <li>Robotics</li>
-            <li>Bioinformatics</li>
-            <li>Computer vision</li>
-            <li>Machine learning</li>
-            <li>Gamedev and computer graphics</li>
-            <li>Functional programming</li>
-        </ul>
     </p>
+    <ul>
+        <li>Bioinformatics</li>
+        <li>Computer vision</li>
+        <li>Machine learning</li>
+        <li>Gamedev and computer graphics</li>
+        <li>Functional programming</li>
+    </ul>
 </div>
 
 <div class="twocolumns">
