--- a/diaphragm/about/templates/about.html
+++ b/diaphragm/about/templates/about.html
@@ -11,7 +11,7 @@
     <h1>About me</h1>
 
     <p>
-        Hi, everyone! My name is <i>Ivan Poroshin</i> and I'm third year computer science bachelor
+        Hi, everyone! My name is <i>Ivan Poroshin</i> and I'm third year computer science undergraduate
         student and enthusiastic programmer, interested in gamedev,
         computer vision, bioinformatics and more.
     </p>
